[gd_scene load_steps=2 format=3 uid="uid://b3xk7qvjm8wpd"]

[ext_resource type="Script" path="res://scripts/ui/main_menu.gd" id="1_menu"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_menu")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "ZSDU"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Zombie Survival Defense Ultimate"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="HostButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Host Game"

[node name="JoinContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="AddressInput" type="LineEdit" parent="VBoxContainer/JoinContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "IP Address"
text = "127.0.0.1"

[node name="JoinButton" type="Button" parent="VBoxContainer/JoinContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Join"

[node name="PortContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="PortLabel" type="Label" parent="VBoxContainer/PortContainer"]
layout_mode = 2
text = "Port:"

[node name="PortInput" type="SpinBox" parent="VBoxContainer/PortContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 1024.0
max_value = 65535.0
value = 27015.0

[node name="Spacer2" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="StatusLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -50.0
offset_right = 200.0
grow_horizontal = 2
grow_vertical = 0
text = ""
horizontal_alignment = 1
